@@ -307,6 +307,20 @@
                                         <div class="col s1"><a class="btn-floating waves-effect waves-light" id="diffSamplesHelp"><i>?</i></a></div>
                                 </div>
                         </li>
+                        <li class="collection-item">
+                                <div class="row" style="margin-bottom: 0;">
+                                        <div class="col s8"><h5>Heatmap base color (Hex):</h5></div>
+                                        <div class="col s3"><input type="text" id="paramLowColor" style="margin-bottom: 0;"></div>
+                                        <div class="col s1"><a class="btn-floating waves-effect waves-light" id="lowColorHelp"><i>?</i></a></div>
+                                </div>
+                        </li>
+                        <li class="collection-item">
+                                <div class="row" style="margin-bottom: 0;">
+                                        <div class="col s8"><h5>Heatmap Depleted color (Hex):</h5></div>
+                                        <div class="col s3"><input type="text" id="paramHighColor" style="margin-bottom: 0;"></div>
+                                        <div class="col s1"><a class="btn-floating waves-effect waves-light" id="highColorHelp"><i>?</i></a></div>
+                                </div>
+                        </li>
                 </ul>
 
                 <div class="row" style="position: absolute; bottom: 8px; width: 100%">
